--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "src/zxing-cpp"]
 	path = src/zxing-cpp
-	url = https://github.com/nu-book/zxing-cpp.git
+	url = https://github.com/itdelsat/zxing-cpp.git
+	branch = zxing-cpp-c14
