--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "src/zxing-cpp"]
 	path = src/zxing-cpp
 	url = https://github.com/itdelsat/zxing-cpp.git
-	branch = zxing-cpp-c14
+	branch = compliant-c++14
